# instalily-case-study

./: .gitignore  AGENTS.md  CLAUDE.md  PRODUCT.md  README.md  SPEC.md
backend/: _probe_diag.py  pyproject.toml
backend/app/: agent.py  main.py  prompts.py  schemas.py
backend/app/scraper/: crawl.py  ingest.py  parse.py  seeds.py
backend/app/store/: chroma_index.py  model_locations.py  parts_db.py
backend/app/tools/: check_compatibility.py  diagnose_symptom.py  find_model_number_location.py  get_install_guide.py  get_part_details.py  live_fetch_part.py  registry.py  search_model_parts_live.py  search_parts.py
backend/data/: parts.sqlite.bak
backend/scripts/: eval.py  probe.py  run_scrape.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/api/chat/: route.ts
frontend/components/: Chat.tsx  Message.tsx  PartSectionMedia.tsx  SuggestedPrompts.tsx  ToolBadge.tsx
frontend/lib/: formatAssistantContent.ts  sse.ts  types.ts
